--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
-  color: #0c0c0c;
-  background-color: #ffffff;
+  color: #f9f9f9;
+  background-color: #2b2a2a;
   overflow-x: hidden;
 }
 
@@ -48,7 +48,7 @@ body {
 }
 
 .heading_container h2 span {
-  color: #2c7873;
+  color: #ffffff;
 }
 
 .heading_container.heading_center {
@@ -182,7 +182,7 @@ a:focus {
 }
 
 .header_section .header_top .contact_nav a:hover i {
-  background-color: #2c7873;
+  background-color: #292727;
 }
 
 .header_section .header_top .social_box {
@@ -214,7 +214,7 @@ a:focus {
 }
 
 .header_section .header_top .social_box a:hover i {
-  background-color: #2c7873;
+  background-color: #292727;
 }
 
 .header_section .header_bottom {
@@ -233,7 +233,7 @@ a:focus {
 }
 
 .navbar-brand span {
-  color: #2c7873;
+  color: #292727;
 }
 
 .navbar-brand:hover {
@@ -264,7 +264,7 @@ a:focus {
 }
 
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link {
-  color: #2c7873;
+  color: #292727;
 }
 
 .custom_nav-container .nav_search-btn {
@@ -276,7 +276,7 @@ a:focus {
 }
 
 .custom_nav-container .nav_search-btn:hover {
-  color: #2c7873;
+  color: #292727;
 }
 
 .custom_nav-container .navbar-toggler {
@@ -419,17 +419,17 @@ a:focus {
 .slider_section .detail-box .btn-box .btn1 {
   display: inline-block;
   padding: 10px 15px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
 }
 
 .slider_section .detail-box .btn-box .btn1:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 .slider_section .img-box img {
@@ -454,7 +454,7 @@ a:focus {
   height: 50px;
   background-color: #ffffff;
   opacity: 1;
-  color: #004445;
+  color: #292727;
   font-size: 14px;
   -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
@@ -463,7 +463,7 @@ a:focus {
 }
 
 .slider_section .carousel_btn-box a:hover {
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
 }
 
@@ -545,17 +545,17 @@ a:focus {
 .service_section .btn-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 0;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
 }
 
 .service_section .btn-box a:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 .service_section .owl-stage .owl-item.active {
@@ -571,7 +571,7 @@ a:focus {
 }
 
 .service_section .owl-stage .owl-item.active.center .box {
-  background-color: #004445;
+  background-color: #292727;
   color: #ffffff;
 }
 
@@ -606,7 +606,7 @@ a:focus {
 }
 
 .service_section .owl-dots .owl-dot.active {
-  background: #2c7873;
+  background: #292727;
 }
 
 .about_section .row {
@@ -633,18 +633,18 @@ a:focus {
 .about_section .detail-box a {
   display: inline-block;
   padding: 10px 35px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
   margin-top: 15px;
 }
 
 .about_section .detail-box a:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 .team_section .box {
@@ -655,7 +655,7 @@ a:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: #004445;
+  background-color: #292727;
   border-radius: 10px;
   overflow: hidden;
   margin-top: 45px;
@@ -689,17 +689,17 @@ a:focus {
 .team_section .btn-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 5px;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
 }
 
 .team_section .btn-box a:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 .contact_section {
@@ -764,18 +764,18 @@ a:focus {
   border: none;
   display: inline-block;
   padding: 12px 55px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 0px;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
   width: 100%;
 }
 
 .contact_section .form_container .btn_box button:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 .contact_section .img-box {
@@ -862,7 +862,7 @@ a:focus {
 }
 
 .info_section {
-  background-color: #004445;
+  background-color: #292727;
   color: #ffffff;
   padding: 45px 0 10px 0;
 }
@@ -973,17 +973,17 @@ a:focus {
 .info_section .info_form button {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #2c7873;
+  background-color: #292727;
   color: #ffffff;
   border-radius: 5px;
   -webkit-transition: all .3s;
   transition: all .3s;
-  border: 1px solid #2c7873;
+  border: 1px solid #292727;
 }
 
 .info_section .info_form button:hover {
   background-color: transparent;
-  color: #2c7873;
+  color: #292727;
 }
 
 /* footer section*/
