--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ a:focus {
 .hero_area {
   position: relative;
   min-height: 100vh;
+  min-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
