--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,9 @@
 
 @media (max-width: 992px) {
   .hero_area {
-    min-height: 120vh;
+    min-height: 70;
+    min-width: -100vh;
+    max-width: 50vh;
   }
 
 
