--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,9 +4,8 @@
 
 @media (max-width: 992px) {
   .hero_area {
-    min-height: 70;
-    min-width: -100vh;
-    max-width: 50vh;
+    min-height: 50vh;
+    min-width: 60vh;
   }
 
 
