--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Poppins', sans-serif;
   color: #f9f9f9;
-  background-color: #2b2a2a;
+  background-color: #a09d9d;
   overflow-x: hidden;
 }
 
